// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileList Snapshots > should match snapshot with empty file list 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-6wudc8 css-dev-only-do-not-override-tjsggz"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Files (0)
      </div>
      <div
        class="ant-card-extra"
      />
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-1tvnk07"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-input-group-wrapper ant-input-group-wrapper-outlined css-dev-only-do-not-override-tjsggz ant-input-search"
          style="flex: 1 1 0%;"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-tjsggz"
          >
            <span
              class="ant-input-affix-wrapper css-dev-only-do-not-override-tjsggz ant-input-outlined"
            >
              <input
                class="ant-input css-dev-only-do-not-override-tjsggz"
                placeholder="Search files..."
                type="search"
                value=""
              />
              <span
                class="ant-input-suffix"
              >
                <button
                  class="ant-input-clear-icon ant-input-clear-icon-hidden"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
            <span
              class="ant-input-group-addon"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-tjsggz ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-input-search-button"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="search"
                    class="anticon anticon-search"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-select ant-select-outlined css-end8kr css-dev-only-do-not-override-tjsggz ant-select-single ant-select-allow-clear ant-select-show-arrow"
          data-testid="file-type-select"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              >
                Filter by type
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-list ant-list-sm ant-list-split css-1auidg5 css-dev-only-do-not-override-tjsggz"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-tjsggz"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-list-empty-text"
          >
            <div
              class="css-dev-only-do-not-override-tjsggz ant-empty ant-empty-normal"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    No data
                  </title>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      cx="32"
                      cy="33"
                      fill="#f5f5f5"
                      rx="32"
                      ry="7"
                    />
                    <g
                      fill-rule="nonzero"
                      stroke="#d9d9d9"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                        fill="#fafafa"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <div
                class="ant-empty-description"
              >
                No data
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileList Snapshots > should match snapshot with files without entity types 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-6wudc8 css-dev-only-do-not-override-tjsggz"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Files (2)
      </div>
      <div
        class="ant-card-extra"
      />
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-1tvnk07"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-input-group-wrapper ant-input-group-wrapper-outlined css-dev-only-do-not-override-tjsggz ant-input-search"
          style="flex: 1 1 0%;"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-tjsggz"
          >
            <span
              class="ant-input-affix-wrapper css-dev-only-do-not-override-tjsggz ant-input-outlined"
            >
              <input
                class="ant-input css-dev-only-do-not-override-tjsggz"
                placeholder="Search files..."
                type="search"
                value=""
              />
              <span
                class="ant-input-suffix"
              >
                <button
                  class="ant-input-clear-icon ant-input-clear-icon-hidden"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
            <span
              class="ant-input-group-addon"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-tjsggz ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-input-search-button"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="search"
                    class="anticon anticon-search"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-select ant-select-outlined css-end8kr css-dev-only-do-not-override-tjsggz ant-select-single ant-select-allow-clear ant-select-show-arrow"
          data-testid="file-type-select"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              >
                Filter by type
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-list ant-list-sm ant-list-split css-1auidg5 css-dev-only-do-not-override-tjsggz"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-tjsggz"
      >
        <div
          class="ant-spin-container"
        >
          <ul
            class="ant-list-items"
          >
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file"
                    class="anticon anticon-file"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        config.json
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /config.json
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      JSON
                    </span>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file"
                    class="anticon anticon-file"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        settings.xml
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /settings.xml
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      XML
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileList Snapshots > should match snapshot with mixed file types 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-6wudc8 css-dev-only-do-not-override-tjsggz"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Files (4)
      </div>
      <div
        class="ant-card-extra"
      >
        <div
          class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
              style="background-color: rgb(63, 81, 181);"
            >
              Weapon
              : 
              1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-1tvnk07"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-input-group-wrapper ant-input-group-wrapper-outlined css-dev-only-do-not-override-tjsggz ant-input-search"
          style="flex: 1 1 0%;"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-tjsggz"
          >
            <span
              class="ant-input-affix-wrapper css-dev-only-do-not-override-tjsggz ant-input-outlined"
            >
              <input
                class="ant-input css-dev-only-do-not-override-tjsggz"
                placeholder="Search files..."
                type="search"
                value=""
              />
              <span
                class="ant-input-suffix"
              >
                <button
                  class="ant-input-clear-icon ant-input-clear-icon-hidden"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
            <span
              class="ant-input-group-addon"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-tjsggz ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-input-search-button"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="search"
                    class="anticon anticon-search"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-select ant-select-outlined css-end8kr css-dev-only-do-not-override-tjsggz ant-select-single ant-select-allow-clear ant-select-show-arrow"
          data-testid="file-type-select"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              >
                Filter by type
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-list ant-list-sm ant-list-split css-1auidg5 css-dev-only-do-not-override-tjsggz"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-tjsggz"
      >
        <div
          class="ant-spin-container"
        >
          <ul
            class="ant-list-items"
          >
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file-text"
                    class="anticon anticon-file-text"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file-text"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        weapon.json
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /weapons/weapon.json
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      JSON
                    </span>
                    <span
                      class="ant-badge ant-badge-not-a-wrapper css-1sguh2d css-dev-only-do-not-override-tjsggz"
                    >
                      <sup
                        class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
                        data-show="true"
                        title="Weapon"
                      >
                        Weapon
                      </sup>
                    </span>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file"
                    class="anticon anticon-file"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        data.csv
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /data/data.csv
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      CSV
                    </span>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file"
                    class="anticon anticon-file"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        script.js
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /scripts/script.js
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      JS
                    </span>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file"
                    class="anticon anticon-file"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        style.css
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /assets/style.css
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      CSS
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileList Snapshots > should match snapshot with single file 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-6wudc8 css-dev-only-do-not-override-tjsggz"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Files (1)
      </div>
      <div
        class="ant-card-extra"
      >
        <div
          class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
              style="background-color: rgb(63, 81, 181);"
            >
              Weapon
              : 
              1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-1tvnk07"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-input-group-wrapper ant-input-group-wrapper-outlined css-dev-only-do-not-override-tjsggz ant-input-search"
          style="flex: 1 1 0%;"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-tjsggz"
          >
            <span
              class="ant-input-affix-wrapper css-dev-only-do-not-override-tjsggz ant-input-outlined"
            >
              <input
                class="ant-input css-dev-only-do-not-override-tjsggz"
                placeholder="Search files..."
                type="search"
                value=""
              />
              <span
                class="ant-input-suffix"
              >
                <button
                  class="ant-input-clear-icon ant-input-clear-icon-hidden"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
            <span
              class="ant-input-group-addon"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-tjsggz ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-input-search-button"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="search"
                    class="anticon anticon-search"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-select ant-select-outlined css-end8kr css-dev-only-do-not-override-tjsggz ant-select-single ant-select-allow-clear ant-select-show-arrow"
          data-testid="file-type-select"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              >
                Filter by type
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-list ant-list-sm ant-list-split css-1auidg5 css-dev-only-do-not-override-tjsggz"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-tjsggz"
      >
        <div
          class="ant-spin-container"
        >
          <ul
            class="ant-list-items"
          >
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file-text"
                    class="anticon anticon-file-text"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file-text"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        single-file.json
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /single-file.json
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      JSON
                    </span>
                    <span
                      class="ant-badge ant-badge-not-a-wrapper css-1sguh2d css-dev-only-do-not-override-tjsggz"
                    >
                      <sup
                        class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
                        data-show="true"
                        title="Weapon"
                      >
                        Weapon
                      </sup>
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileList Snapshots > should match snapshot with standard file list 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-6wudc8 css-dev-only-do-not-override-tjsggz"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Files (5)
      </div>
      <div
        class="ant-card-extra"
      >
        <div
          class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
              style="background-color: rgb(63, 81, 181);"
            >
              Weapon
              : 
              1
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
              style="background-color: rgb(63, 81, 181);"
            >
              Equipment
              : 
              1
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
              style="background-color: rgb(63, 81, 181);"
            >
              Skill
              : 
              1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-1tvnk07"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-input-group-wrapper ant-input-group-wrapper-outlined css-dev-only-do-not-override-tjsggz ant-input-search"
          style="flex: 1 1 0%;"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-tjsggz"
          >
            <span
              class="ant-input-affix-wrapper css-dev-only-do-not-override-tjsggz ant-input-outlined"
            >
              <input
                class="ant-input css-dev-only-do-not-override-tjsggz"
                placeholder="Search files..."
                type="search"
                value=""
              />
              <span
                class="ant-input-suffix"
              >
                <button
                  class="ant-input-clear-icon ant-input-clear-icon-hidden"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
            <span
              class="ant-input-group-addon"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-tjsggz ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-input-search-button"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="search"
                    class="anticon anticon-search"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-select ant-select-outlined css-end8kr css-dev-only-do-not-override-tjsggz ant-select-single ant-select-allow-clear ant-select-show-arrow"
          data-testid="file-type-select"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              >
                Filter by type
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-list ant-list-sm ant-list-split css-1auidg5 css-dev-only-do-not-override-tjsggz"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-tjsggz"
      >
        <div
          class="ant-spin-container"
        >
          <ul
            class="ant-list-items"
          >
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file-text"
                    class="anticon anticon-file-text"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file-text"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        fire-sword.json
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /weapons/fire-sword.json
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      JSON
                    </span>
                    <span
                      class="ant-badge ant-badge-not-a-wrapper css-1sguh2d css-dev-only-do-not-override-tjsggz"
                    >
                      <sup
                        class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
                        data-show="true"
                        title="Weapon"
                      >
                        Weapon
                      </sup>
                    </span>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file-text"
                    class="anticon anticon-file-text"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file-text"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        heal-potion.json
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /items/heal-potion.json
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      JSON
                    </span>
                    <span
                      class="ant-badge ant-badge-not-a-wrapper css-1sguh2d css-dev-only-do-not-override-tjsggz"
                    >
                      <sup
                        class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
                        data-show="true"
                        title="Equipment"
                      >
                        Equipment
                      </sup>
                    </span>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file-text"
                    class="anticon anticon-file-text"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file-text"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        fireball.json
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /skills/fireball.json
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      JSON
                    </span>
                    <span
                      class="ant-badge ant-badge-not-a-wrapper css-1sguh2d css-dev-only-do-not-override-tjsggz"
                    >
                      <sup
                        class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
                        data-show="true"
                        title="Skill"
                      >
                        Skill
                      </sup>
                    </span>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file"
                    class="anticon anticon-file"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        config.json
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /config/config.json
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      JSON
                    </span>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ant-list-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-tjsggz ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-srqri8"
              >
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="file"
                    class="anticon anticon-file"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="file"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="css-1iyoj2o"
                  >
                    <span
                      class="ant-typography css-dev-only-do-not-override-tjsggz"
                    >
                      <strong>
                        readme.txt
                      </strong>
                    </span>
                    <span
                      class="ant-typography ant-typography-secondary css-uahybi css-dev-only-do-not-override-tjsggz"
                    >
                      /docs/readme.txt
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <span
                      class="ant-tag ant-tag-has-color css-10scxvy css-dev-only-do-not-override-tjsggz"
                      style="background-color: rgb(135, 208, 104);"
                    >
                      TXT
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
